// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render correctly when set direction 1`] = `
<div>
  <div
    aria-busy="false"
    class="rc-list"
    role="feed"
  >
    <div
      class="rc-list__placeholder"
    />
    <div
      class="rc-list__finished-text"
    >
      没有更多了
    </div>
  </div>
</div>
`;

exports[`List should render error slots correctly and do not trigger onLoad 1`] = `
<div>
  <div
    class="rc-list"
    role="feed"
  >
    <div
      class="rc-list__error-text"
    >
      errorTip!
    </div>
    <div
      class="rc-list__placeholder"
    />
  </div>
</div>
`;

exports[`List should render finish tip correctly and do not trigger onLoad 1`] = `
<div>
  <div
    class="rc-list"
    role="feed"
  >
    <div
      class="rc-list__finished-text"
    >
      finished
    </div>
    <div
      class="rc-list__placeholder"
    />
  </div>
</div>
`;

exports[`List should render loading tip correctly and do not trigger onLoad 1`] = `
<div>
  <div
    aria-busy="true"
    class="rc-list"
    role="feed"
  >
    <div
      class="rc-list__loading"
    >
      <div
        class="rc-list__loading-icon rc-loading rc-loading--circular"
      >
        <span
          class="rc-loading__spinner rc-loading__spinner--circular"
          style="width: 16px; height: 16px;"
        >
          <svg
            class="rc-loading__circular"
            viewBox="25 25 50 50"
          >
            <circle
              cx="50"
              cy="50"
              fill="none"
              r="20"
            />
          </svg>
        </span>
        <span
          class="rc-loading__text"
        >
          加载中...
        </span>
      </div>
    </div>
    <div
      class="rc-list__placeholder"
    />
  </div>
</div>
`;

exports[`List should trigger load when scroll 1`] = `
<div>
  <div
    class="rc-list"
    role="feed"
  >
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        0
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        1
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        2
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        3
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        4
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        5
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        6
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        7
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        8
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        9
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        10
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        11
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        12
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        13
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        14
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        15
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        16
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        17
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        18
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        19
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        20
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        21
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        22
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        23
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        24
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        25
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        26
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        27
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        28
      </div>
    </div>
    <div
      class="rc-cell"
    >
      <div
        class="rc-cell__title"
      >
        29
      </div>
    </div>
    <div
      class="rc-list__placeholder"
    />
  </div>
</div>
`;
